--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "babel-preset-stage-2": "^6.3.13",
     "body-parser": "^1.14.2",
     "codemirror": "^5.11.0",
+    "connect-mongo": "^1.1.0",
+    "cookie-parser": "^1.4.1",
     "css-loader": "^0.23.1",
     "express": "4.13.4",
     "express-hbs": "^0.8.4",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "mongoose": "^4.3.7",
